add: swagger docs for handlers
