# internal/handler/auth.go
@@ -4,7 +4,6 @@ import (
 	"context"
 	"errors"
 	"manga-library/internal/domain"
-	appErrors "manga-library/pkg/errors"
 	"net/http"
 	"time"
 
@@ -16,6 +15,16 @@ const (
 	responseTimeout = time.Second * 30
 )
 
+// Sign Up
+// @Summary Sign up
+// @Description Sign up via username and password
+// @Tags Authorization
+// @Accept  json
+// @Param auth body domain.CreateUserDTO true "Auth Sign Up Input"
+// @Success 201
+// @Failure 409 "Username is already exists"
+// @Failure 500
+// @Router /auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	h.logger.Debugln("signing up user")
 	var userDTO domain.CreateUserDTO
@@ -26,7 +35,7 @@ func (h *Handler) signUp(c *gin.Context) {
 
 	if err := h.services.Authorization.SignUp(c, userDTO); err != nil {
 		h.logger.Errorln(err)
-		if errors.Is(err, appErrors.ErrUsernameExists) {
+		if errors.Is(err, domain.ErrUsernameExists) {
 			ErrorResponse(c, http.StatusConflict, err.Error())
 		} else {
 			ErrorResponse(c, http.StatusInternalServerError, err.Error())
@@ -36,6 +45,18 @@ func (h *Handler) signUp(c *gin.Context) {
 
 	c.Writer.WriteHeader(http.StatusCreated)
 }
+
+// Sign In
+// @Summary Sign In
+// @Description Sign in via username and password
+// @Tags Authorization
+// @Accept  json
+// @Produce  json
+// @Param auth body domain.LoginUserDTO true "Auth Sign In Input"
+// @Success 200 {object} string "token"
+// @Failure 400 "Invalid input"
+// @Failure 500
+// @Router /auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	h.logger.Debugln("signing in user")
 	ctx, cancel := context.WithTimeout(c, responseTimeout)
